fix: wrap the cards in a ul tag

--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -6,6 +6,9 @@
 }
 
 .movies-card-list__items {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
